@@ -185,7 +185,7 @@ public class BasicPriceFloorResolver implements PriceFloorResolver {
         final PriceFloorData data = ObjectUtil.getIfNotNull(floors, PriceFloorRules::getData);
         final List<PriceFloorModelGroup> modelGroups = ObjectUtil.getIfNotNull(data, PriceFloorData::getModelGroups);
 
-        return CollectionUtils.isNotEmpty(modelGroups) ? modelGroups.get(0) : null;
+        return CollectionUtils.isNotEmpty(modelGroups) ? modelGroups.getFirst() : null;
     }
 
     private static <V> Map<String, V> keysToLowerCase(Map<String, V> map) {
@@ -321,7 +321,7 @@ public class BasicPriceFloorResolver implements PriceFloorResolver {
             return PrebidConfigParameter.wildcard();
         }
 
-        final ImpMediaType impMediaType = impMediaTypes.get(0);
+        final ImpMediaType impMediaType = impMediaTypes.getFirst();
         return impMediaType == ImpMediaType.video
                 ? SimpleDirectParameter.of(List.of(impMediaType.toString(), VIDEO_ALIAS))
                 : SimpleDirectParameter.of(impMediaType.toString());
@@ -339,7 +339,7 @@ public class BasicPriceFloorResolver implements PriceFloorResolver {
             return null;
         }
 
-        return switch (mediaTypes.get(0)) {
+        return switch (mediaTypes.getFirst()) {
             case banner -> resolveFormatFromBannerImp(imp);
             case video -> resolveFormatFromVideoImp(imp);
             default -> null;
@@ -354,7 +354,7 @@ public class BasicPriceFloorResolver implements PriceFloorResolver {
             case 0 -> formatOf(
                     ObjectUtil.getIfNotNull(banner, Banner::getW),
                     ObjectUtil.getIfNotNull(banner, Banner::getH));
-            case 1 -> formats.get(0);
+            case 1 -> formats.getFirst();
             default -> null;
         };
     }
